--- a/content/servizi.html
+++ b/content/servizi.html
@@ -21,14 +21,14 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
   <div class="relative pt-24 sm:pt-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
-        <p class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Manutenzione</p>
-        <h1 class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
-        <p class="mt-8 text-base/6 text-slate-600">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
+        <p class="text-lg sm:text-xl font-semibold tracking-tight text-red-700">Manutenzione</p>
+        <h1 class="mt-2 text-3xl sm:text-4xl lg:text-5xl font-bold text-slate-900 tracking-tight">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
+        <p class="mt-8 text-base/7 text-gray-700">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
       </div>
     </div>
   </div>
 
-  <div class="mt-16 carousel">
+  <div class="mt-16" data-flickity='{ "draggable": true, "pageDots": false }'>
     {{< slide
       text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
       image="/images/cilindro-sitema.jpg" >}}
@@ -64,7 +64,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
       <div class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
         <div class="lg:pr-4">
           <div class="lg:max-w-lg">
-            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Centro Cilindri Digital Service</h1>
+            <h1 class="text-2xl sm:text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Centro Cilindri Digital Service</h1>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
       </div>
       <div class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
         <div class="lg:pr-4">
-          <div class="max-w-xl lg:max-w-lg text-base/7 space-y-4 text-gray-700">
+          <div class="max-w-xl lg:max-w-lg text-base/7 space-y-4 text-gray-600">
             <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
             <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
           </div>
@@ -92,13 +92,13 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-3xl lg:text-center">
         <h2 class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Produzione</h2>
-        <p class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Progettazione, reverse engineering e costruzione di nuovi cilindri e componenti meccanici</p>
-        <p class="mt-6 text-base/6 text-slate-600">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
+        <p class="mt-2 text-3xl sm:text-4xl lg:text-5xl font-bold text-slate-900 tracking-tight">Progettazione, reverse engineering e costruzione di nuovi cilindri e componenti meccanici</p>
+        <p class="mt-6 text-base/7 text-slate-600">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
       </div>
     </div>
   </div>
 
-  <div class="carousel mb-16">
+  <div class="mb-16" data-flickity='{ "percentPosition": true, "draggable": true, "pageDots": false }'>
     {{< slide
       text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
       image="/images/cilindro-sitema.jpg"
@@ -128,8 +128,8 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
         <p class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Ricambi</p>
-        <h1 class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h1>
-        <div class="text-base/6 text-slate-600">
+        <h1 class="mt-2 text-3xl sm:text-4xl lg:text-5xl font-bold text-slate-900 tracking-tight">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h1>
+        <div class="text-base/7 text-slate-600">
           <p class="mt-8">Siamo esperti in guarnizioni per oleodinamica e pneumatica perché conosciamo bene i punti critici di un cilindro e le attenzioni che bisogna avere durante la loro manutenzione. Il nostro core business è la riparazione di cilindri esistenti: da qui nasce l’estrema attenzione che poniamo sul sistema di tenuta, per offrire al cliente industriale soluzioni chiavi in mano ad altissima affidabilità.</p>
           <p class="mt-8">Quando il cliente effettua internamente la manutenzione dei cilindri, lo supportiamo con il nostro personale tecnico offrendo assistenza sul campo nelle fasi di smontaggio del cilindro, rilevazione dimensioni e tipologia guarnizioni sulla base delle condizioni di lavoro, e durante il montaggio finale.</p>
         </div>
@@ -137,7 +137,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
     </div>
   </div>
 
-  <div class="carousel mb-16">
+  <div class="mb-16" data-flickity='{ "percentPosition": true, "draggable": true, "pageDots": false }'>
     {{< slide
       text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
       image="/images/cilindri-bilanciatori.jpg"
