--- a/content/servizi.html
+++ b/content/servizi.html
@@ -28,18 +28,18 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
     </div>
   </div>
 
-  <div class="mt-16" data-flickity='{ "draggable": true, "pageDots": false }'>
-    {{< slide
-      text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
-      image="/images/cilindro-sitema.jpg" >}}
-
-    {{< slide
-      text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
-      image="/images/riparazione-cilindri.jpg" >}}
-
-    {{< slide
-      text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
-      image="/images/cilindri-siderurgici.jpg" >}}
+  <div class="mt-16">
+    <ul class="flex snap-x snap-mandatory gap-x-6 overflow-x-auto">
+      {{< slide
+        text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
+        image="/images/cilindro-sitema.jpg" >}}
+      {{< slide
+        text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
+        image="/images/riparazione-cilindri.jpg" >}}
+      {{< slide
+        text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
+        image="/images/cilindri-siderurgici.jpg" >}}
+    </ul>
   </div>
 
   <div class="mt-16 relative isolate overflow-hidden bg-gray-800 py-24 sm:py-32">
@@ -88,7 +88,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
 <!-- Produzione -->
 <section id="produzione">
 
-  <div class="relative isolate overflow-hidden py-24 sm:py-32">
+  <div class="relative isolate overflow-hidden pb-24 sm:pb-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-3xl lg:text-center">
         <h2 class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Produzione</h2>
@@ -98,23 +98,25 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
     </div>
   </div>
 
-  <div class="mb-16" data-flickity='{ "percentPosition": true, "draggable": true, "pageDots": false }'>
-    {{< slide
-      text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
-      image="/images/cilindro-sitema.jpg"
-      alt="" >}}
-    {{< slide
-      text="Le fasi di produzione dei singoli componenti meccanici dei cilindri avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura."
-      image="/images/pistoni-steli.jpg"
-      alt="" >}}
-    {{< slide
-      text="Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani."
-      image=""
-      alt="" >}}
-    {{< slide
-      text="Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede."
-      image=""
-      alt="" >}}
+  <div class="mb-16">
+    <ul class="flex snap-x snap-mandatory gap-x-6 overflow-x-auto">
+      {{< slide
+        text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
+        image="/images/cilindro-sitema.jpg"
+        alt="" >}}
+      {{< slide
+        text="Le fasi di produzione dei singoli componenti meccanici dei cilindri avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura."
+        image="/images/pistoni-steli.jpg"
+        alt="" >}}
+      {{< slide
+        text="Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani."
+        image=""
+        alt="" >}}
+      {{< slide
+        text="Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede."
+        image=""
+        alt="" >}}
+    </ul>
   </div>
 
 </section>
@@ -137,21 +139,21 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
     </div>
   </div>
 
-  <div class="mb-16" data-flickity='{ "percentPosition": true, "draggable": true, "pageDots": false }'>
-    {{< slide
-      text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
-      image="/images/cilindri-bilanciatori.jpg"
-      alt="" >}}
-
-    {{< slide
-      text="Fornitura guarnizioni commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri."
-      image="/images/pacco-guarnizioni.jpg"
-      alt="" >}}
-
-    {{< slide
-      text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
-      image="/images/boccola-guarnizioni.jpg"
-      alt="" >}}
+  <div class="mb-16 mx-auto">
+    <ul class="flex snap-x snap-mandatory gap-x-6 overflow-x-auto">
+      {{< slide
+        text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
+        image="/images/cilindri-bilanciatori.jpg"
+        alt="" >}}
+      {{< slide
+        text="Fornitura guarnizioni commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri."
+        image="/images/pacco-guarnizioni.jpg"
+        alt="" >}}
+      {{< slide
+        text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
+        image="/images/boccola-guarnizioni.jpg"
+        alt="" >}}
+    </ul>
   </div>
 
 </section>
