Completato passaggio del deploy precedente e creato file TODO

--- a/content/servizi.html
+++ b/content/servizi.html
@@ -1,7 +1,7 @@
 ---
 title: "I nostri servizi"
 heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
-backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/6692b1d60b0bfbc78807e7ae_CCS-hydraulic-cylinder-hero.webp"
+backgroundImage: ""
 ---
 
 <!-- Navigation -->
@@ -31,12 +31,14 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
   <div class="mt-16">
     <ul class="flex snap-x snap-mandatory gap-x-6 overflow-x-auto">
       {{< slide
+        first="true"
         text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
         image="/images/cilindro-sitema.jpg" >}}
       {{< slide
         text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
         image="/images/riparazione-cilindri.jpg" >}}
       {{< slide
+        last="true"
         text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
         image="/images/cilindri-siderurgici.jpg" >}}
     </ul>
@@ -101,6 +103,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
   <div class="mb-16">
     <ul class="flex snap-x snap-mandatory gap-x-6 overflow-x-auto">
       {{< slide
+        first="true"
         text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
         image="/images/cilindro-sitema.jpg"
         alt="" >}}
@@ -113,6 +116,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
         image=""
         alt="" >}}
       {{< slide
+        last="true"
         text="Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede."
         image=""
         alt="" >}}
@@ -142,6 +146,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
   <div class="mb-16 mx-auto">
     <ul class="flex snap-x snap-mandatory gap-x-6 overflow-x-auto">
       {{< slide
+        first="true"
         text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
         image="/images/cilindri-bilanciatori.jpg"
         alt="" >}}
@@ -150,6 +155,7 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
         image="/images/pacco-guarnizioni.jpg"
         alt="" >}}
       {{< slide
+        last="true"
         text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
         image="/images/boccola-guarnizioni.jpg"
         alt="" >}}
