--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -1,13 +1,13 @@
 ---
 title: "Chi siamo"
 heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
-backgroundImage: ""
+backgroundImage: "https://blog.areatecnica.it/perche-fasce-guida-incrementano-vita-affidabilita-cilindro-idraulico/hydraulic-cylinder.png"
 ---
 
 <!-- Intro -->
 <div class="relative py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-4xl text-base/6 text-gray-700 text-center">
+    <div class="mx-auto max-w-4xl text-base/7 text-gray-700 text-center">
       <p class="mb-6 lg:mb-12">Supportiamo le imprese industriali con servizi di <span class="font-medium text-red-700">riparazione e manutenzione</span> di cilindri idraulici e pneumatici esistenti, con la <span class="font-medium text-red-700">progettazione e costruzione</span> interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre <span class="font-medium text-red-700">assistenza sul campo</span> e <span class="font-medium text-red-700">vendita guarnizioni di tenuta</span> per cilindri e presse.</p>
       <p>Il nostro principale obiettivo è quello di creare <span class="font-medium text-red-700">relazioni a lungo termine</span> con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
     </div>
