--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -26,9 +26,18 @@ backgroundImage: "https://blog.areatecnica.it/perche-fasce-guida-incrementano-vi
       </div>
 
     <div class="mt-8 lg:mt-16 relative grid grid-cols-1 gap-8 md:grid-cols-3">
-      {{< card title="Manutenzione" text="Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici" image="/images/cilindro-200.jpg" >}}
-      {{< card title="Produzione" text="Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno" image="/images/pistoni-steli.jpg" >}}
-      {{< card title="Ricambi" text="Assistenza sul campo e vendita di guarnizioni per cilindri e presse" image="/images/pistone-guarnizioni.jpg" >}}
+      {{< card
+      title="Manutenzione"
+      text="Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici"
+      image="/images/cilindro-200.jpg" >}}
+      {{< card
+      title="Produzione"
+      text="Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno"
+      image="/images/pistoni-steli.jpg" >}}
+      {{< card
+      title="Ricambi"
+      text="Assistenza sul campo e vendita di guarnizioni per cilindri e presse"
+      image="/images/pistone-guarnizioni.jpg" >}}
     </div>
 
     <div class="mt-8 lg:mt-16 text-center">
