--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -16,8 +16,7 @@ backgroundImage: "https://blog.areatecnica.it/perche-fasce-guida-incrementano-vi
   </div>
 </div>
 
-{{< cta >}}
-
+{{< stripe image="/images/cilindri-arancio.jpg" >}}
 
 <!-- Aree di competenza -->
 <section aria-label="Aree di competenza" class="py-20 sm:py-32">
@@ -50,7 +49,7 @@ backgroundImage: "https://blog.areatecnica.it/perche-fasce-guida-incrementano-vi
   </div>
 </section>
 
-{{< cta >}}
+{{< stripe image="/images/pezzi-cilindro-telescopico.jpg" >}}
 
 <!-- Perchè scegliere Centro Cilindri -->
 <section aria-label="Perchè scegliere Centro Cilindri" class="py-20 sm:py-32">
@@ -94,7 +93,7 @@ backgroundImage: "https://blog.areatecnica.it/perche-fasce-guida-incrementano-vi
   </div>
 </section>
 
-{{< cta >}}
+{{< stripe image="/images/pezzi-rev.jpg" >}}
 
 <!-- I nostri clienti -->
 <section aria-label="I nostri clienti" class="py-20 sm:py-32">
