--- a/content/contatti.html
+++ b/content/contatti.html
@@ -3,39 +3,14 @@ title: "Contatti"
 heading: "Contatti"
 ---
 
-<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
-  <div class="sm:text-center">
-
-    <p class="mb-4">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino, in Via della Canapa.</p>
-    <p class="mb-8">Per informazioni o se hai bisogno di assistenza tecnica e commerciale puoi contattare:</p>
-
-    <div class="flex flex-wrap justify-center gap-4 mb-8">
-      <div class="w-full max-w-sm hover:bg-gray-100 hover:text-blue-800 border rounded-lg border-slate-200 shadow-lg">
-        <div class="flex flex-col items-center p-4 lg:p-8">
-          <h5 class="mb-1 text-xl font-medium text-gray-900">Alessio Mancini</h5>
-          <span class="mb-8 text-sm text-gray-500">Sales Manager & Field Service</span>
-          <div class="text-sm text-center">
-            <span>(+39) 348 1630147</span>
-            <span>alessio.mancini@centrocilindri.it</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="w-full max-w-sm hover:bg-gray-100 hover:text-blue-800 border rounded-lg border-slate-200 shadow-lg">
-        <div class="flex flex-col items-center p-4 lg:p-8">
-          <h5 class="mb-1 text-xl font-medium text-gray-900">Gianluca Mancini</h5>
-          <span class="mb-8 text-sm text-gray-500">Production Manager & Technical Support</span>
-          <div class="text-sm text-center">
-            <span>(+39) 366 4734163</span>
-            <span>gianluca.mancini@centrocilindri.it</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="text-gray-800">
+<section aria-label="Contatti" class="py-20 sm:py-32">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <p class="text-base/7 text-gray-800">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino.</p>
+    <div class="mt-8 text-gray-800">
       <p><strong>Sede legale</strong> Via Bagetti 11, 10138 Torino (TO)</p>
       <p><strong>Sede operativa</strong> Via della Canapa 9, 10060 Macello (TO)</p>
+      <p><strong>Telefono</strong> +39 3514409228</p>
+      <p><strong>Email</strong> <a href="mailto:info@centrocilindri.it">info@centrocilindri.it</a></p>
     </div>
   </div>
 </section>
