--- a/content/servizi.html
+++ b/content/servizi.html
@@ -41,7 +41,8 @@ backgroundImage: ""
 </section>
 
 <!-- Urgenze o impianto fermo? -->
-<section id="urgenze" aria-label="Urgenze" class="bg-slate-800 py-20 sm:py-32">
+<section id="urgenze" aria-label="Urgenze" class="relative isolate overflow-hidden bg-slate-800 py-20 sm:py-32">
+  <div class="absolute size-full inset-0 bg-black/10 bg-gradient-to-t from-black/70 -z-10"></div>
   <div class="max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="max-w-2xl lg:max-w-3xl">
       <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-gray-200 tracking-tight">Urgenze o impianto fermo?</h2>
