--- a/content/contatti.html
+++ b/content/contatti.html
@@ -7,10 +7,12 @@ heading: "Contatti"
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <p class="text-base/7 text-gray-800">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino.</p>
     <div class="mt-8 text-gray-800">
+      <p><strong>Centro Cilindri Srl</strong></p>
       <p><strong>Sede legale</strong> Via Bagetti 11, 10138 Torino (TO)</p>
       <p><strong>Sede operativa</strong> Via della Canapa 9, 10060 Macello (TO)</p>
       <p><strong>Telefono</strong> +39 3514409228</p>
       <p><strong>Email</strong> <a href="mailto:info@centrocilindri.it">info@centrocilindri.it</a></p>
+      <p><strong>Partita IVA</strong> 12858170017</p>
     </div>
   </div>
 </section>
