--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -1,7 +1,7 @@
 ---
 title: "Chi siamo"
 heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
-backgroundImage: "https://blog.areatecnica.it/perche-fasce-guida-incrementano-vita-affidabilita-cilindro-idraulico/hydraulic-cylinder.png"
+backgroundImage: "/images/cilindro-danieli.jpg"
 ---
 
 <!-- Intro -->
