--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -1,7 +1,7 @@
 ---
 title: "Chi siamo"
 heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
-backgroundImage: "/images/cilindro-danieli.jpg"
+backgroundImage: ""
 ---
 
 <!-- Intro -->
@@ -9,8 +9,8 @@ backgroundImage: "/images/cilindro-danieli.jpg"
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="mx-auto max-w-4xl text-center">
       <div class="space-y-4 text-base/7 text-gray-700">
-        <p>Supportiamo le imprese industriali con servizi di <span class="font-medium text-red-700">riparazione e manutenzione</span> di cilindri idraulici e pneumatici esistenti, con la <span class="font-medium text-red-700">progettazione e costruzione</span> interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre <span class="font-medium text-red-700">assistenza sul campo</span> e <span class="font-medium text-red-700">vendita guarnizioni di tenuta</span> per cilindri e presse.</p>
-        <p>Il nostro principale obiettivo è quello di creare <span class="font-medium text-red-700">relazioni a lungo termine</span> con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
+        <p>Offriamo soluzioni affidabili e su misura per la <span class="font-medium text-red-700">revisione, riparazione e costruzione di cilindri idraulici e pneumatici</span>, garantendo ai nostri clienti qualità, efficienza e supporto tecnico specializzato. Ci impegniamo a <span class="font-medium text-red-700">ridurre i tempi di fermo macchina</span>, ottimizzare le prestazioni dei componenti e fornire un servizio <span class="font-medium text-red-700">rapido e flessibile</span>. Grazie alla nostra esperienza e competenza, creiamo valore per i settori industriali con cui collaboriamo, contribuendo alla continuità operativa e all’efficienza produttiva dei nostri clienti.</p>
+        <p>Il nostro principale obiettivo è affermarci come partner strategico per le aziende che vogliono unire <span class="font-medium text-red-700">produttività, affidabilità e rispetto per l’ambiente</span>, creando relazioni a lungo termine con i clienti per sviluppare programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina, promuovendo un modello di industria sostenibile e circolare. Vogliamo ridurre l’impatto ambientale incrementando il ciclo di vita dei cilindri ed ottimizzando l’utilizzo di materiali e risorse. Investiamo in innovazione, formazione e sviluppo tecnologico per offrire soluzioni efficienti, contribuendo alla manutenzione predittiva ed all’aumento delle performance degli impianti industriali.</p>
       </div>
     </div>
   </div>
