--- a/content/contatti.html
+++ b/content/contatti.html
@@ -1,6 +1,7 @@
 ---
 title: "Contatti"
 heading: "Contatti"
+backgroundImage: "/images/monviso.jpg"
 ---
 
 <section aria-label="Contatti" class="py-20 sm:py-32">
@@ -9,7 +10,7 @@ heading: "Contatti"
     <div class="mt-8 text-gray-800">
       <p><strong>Centro Cilindri Srl</strong></p>
       <p><strong>Sede legale</strong> Via Bagetti 11, 10138 Torino (TO)</p>
-      <p><strong>Sede operativa</strong> Via della Canapa 9, 10060 Macello (TO)</p>
+      <p><strong>Sede operativa</strong> Via della Canapa 3-5, 10060 Macello (TO)</p>
       <p><strong>Telefono</strong> +39 3514409228</p>
       <p><strong>Email</strong> <a href="mailto:info@centrocilindri.it">info@centrocilindri.it</a></p>
       <p><strong>Partita IVA</strong> 12858170017</p>
