--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -1,14 +1,14 @@
 ---
 title: "Chi siamo"
 heading: "Specialisti in riparazione cilindri e fornitura guarnizioni"
-backgroundImage: ""
+backgroundImage: "/images/nuove/38.jpg"
 ---
 
 <!-- Intro -->
 <div class="relative py-20 sm:py-32">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="mx-auto max-w-4xl text-center">
-      <div class="space-y-4 text-base/7 text-gray-700">
+      <div class="space-y-4 text-base/8 text-gray-700">
         <p>Offriamo soluzioni affidabili e su misura per la <span class="font-medium text-red-700">revisione, riparazione e costruzione di cilindri idraulici e pneumatici</span>, garantendo ai nostri clienti qualità, efficienza e supporto tecnico specializzato. Ci impegniamo a <span class="font-medium text-red-700">ridurre i tempi di fermo macchina</span>, ottimizzare le prestazioni dei componenti e fornire un servizio <span class="font-medium text-red-700">rapido e flessibile</span>. Grazie alla nostra esperienza e competenza, creiamo valore per i settori industriali con cui collaboriamo, contribuendo alla continuità operativa e all’efficienza produttiva dei nostri clienti.</p>
         <p>Il nostro principale obiettivo è affermarci come partner strategico per le aziende che vogliono unire <span class="font-medium text-red-700">produttività, affidabilità e rispetto per l’ambiente</span>, creando relazioni a lungo termine con i clienti per sviluppare programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina, promuovendo un modello di industria sostenibile e circolare. Vogliamo ridurre l’impatto ambientale incrementando il ciclo di vita dei cilindri ed ottimizzando l’utilizzo di materiali e risorse. Investiamo in innovazione, formazione e sviluppo tecnologico per offrire soluzioni efficienti, contribuendo alla manutenzione predittiva ed all’aumento delle performance degli impianti industriali.</p>
       </div>
@@ -17,7 +17,7 @@ backgroundImage: ""
 </div>
 
 {{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
-  {{< image src="/images/cilindro-danieli.jpg" class="col-span-1 sm:col-span-2" >}}
+  {{< image src="/images/nuove/16.jpg" class="col-span-1 sm:col-span-2" >}}
   {{< image src="/images/pezzi-cilindro-telescopico.jpg" class="col-span-1" >}}
   {{< image src="/images/pezzi-rev.jpg" class="col-span-1" >}}
 {{< /stripe >}}
@@ -57,7 +57,7 @@ backgroundImage: ""
 </section>
 
 {{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
-  {{< image src="/images/cilindro-siderurgico.jpg" class="col-span-1 sm:col-span-2" >}}
+  {{< image src="/images/nuove/49.jpg" class="col-span-1 sm:col-span-2" >}}
   {{< image src="/images/stelo-pistone.jpg" class="col-span-1" >}}
   {{< image src="/images/cilindro-collare.jpg" class="col-span-1" >}}
 {{< /stripe >}}
@@ -105,9 +105,9 @@ backgroundImage: ""
 </section>
 
 {{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
-  {{< image src="/images/cilindri-nuovi.jpg" class="col-span-1 sm:col-span-2" >}}
-  {{< image src="/images/riparazione-cilindri.jpg" class="col-span-1" >}}
-  {{< image src="/images/bronzina.jpg" class="col-span-1" >}}
+  {{< image src="/images/nuove/41.jpg" class="col-span-1 sm:col-span-2" >}}
+  {{< image src="/images/nuove/63.jpg" class="col-span-1" >}}
+  {{< image src="/images/nuove/52.jpg" class="col-span-1" >}}
 {{< /stripe >}}
 
 <!-- I nostri clienti -->
