--- a/content/contatti.html
+++ b/content/contatti.html
@@ -1,7 +1,7 @@
 ---
 title: "Contatti"
 heading: "Contatti"
-backgroundImage: "/images/monviso.jpg"
+backgroundImage: "/images/macello.jpg"
 ---
 
 <section aria-label="Contatti" class="py-20 sm:py-32">
