--- a/content/servizi.html
+++ b/content/servizi.html
@@ -1,7 +1,7 @@
 ---
 title: "I nostri servizi"
 heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
-backgroundImage: ""
+backgroundImage: "/images/cilindro-danieli.jpg"
 ---
 
 <!-- Navigation -->
@@ -79,7 +79,11 @@ backgroundImage: ""
   </div>
 </section>
 
-{{< cta >}}
+{{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
+  {{< image src="/images/nuove/34.jpg" class="col-span-1 sm:col-span-2" >}}
+  {{< image src="/images/nuove/10.jpg" class="col-span-1" >}}
+  {{< image src="/images/nuove/12.jpg" class="col-span-1" >}}
+{{< /stripe >}}
 
 <!-- Produzione -->
 <section id="produzione" aria-label="Produzione" class="py-20 sm:py-32">
@@ -109,7 +113,11 @@ backgroundImage: ""
   </div>
 </section>
 
-{{< cta >}}
+{{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
+  {{< image src="/images/nuove/29.jpg" class="col-span-1 sm:col-span-2" >}}
+  {{< image src="/images/nuove/23.jpg" class="col-span-1" >}}
+  {{< image src="/images/nuove/3.jpg" class="col-span-1" >}}
+{{< /stripe >}}
 
 <!-- Ricambi -->
 <section id="ricambi" aria-label="Ricambi" class="py-20 sm:py-32">
